implement Remove song from playlist and retrieve songs from playlist

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -45,3 +45,13 @@ __*
 .request
 include::{snippets}/AddSongToPlaylist/http-request.adoc[]
 
+
+
+
+
+*__Get Songs in a playlist
+__*
+
+.request
+include::{snippets}/GetAllSongInPlaylist/http-request.adoc[]
+
